# hacky

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  coinary_scan.json  pyproject.toml
.github/workflows/: ci.yml
tests/: test_integration.py
tests/cli/: test_baseline.py  test_false_positive.py  test_main.py
tests/config/: test_config.py
tests/core/: test_agent_graph.py  test_agent_scanner.py  test_alert_manager.py  test_auth.py  test_autofix.py  test_autofix_pr.py  test_code_gateway.py  test_crawler.py  test_cvss.py  test_engine.py  test_engine_crawler_integration.py  test_headless_crawler.py  test_interactsh_client.py  test_marketplace.py  test_models.py  test_nuclei_compat.py  test_oob_server.py  test_orchestrator.py  test_plugin_base.py  test_plugin_loader.py  test_poc_generator.py  test_poc_verifier.py  test_rate_limiter.py  test_repeater.py  test_scan_policy.py  test_scheduler.py  test_session.py  test_state.py  test_state_transitions.py  test_taint_tracker.py  test_template_engine.py  test_workflow.py
tests/e2e/: benchmark_v2.2.json  benchmark_wb_v2.2.json  poc_test  poc_test.poc.md  scan_report.html  scan_result.json  scan_result_v2.json  scan_result_v3.json  scan_result_v4.json  vulnerable_app.py
tests/fixtures/: sample_plugin.py
tests/llm/: test_llm.py
tests/reports/: test_html_report.py  test_json_report.py  test_pdf_report.py  test_sarif_report.py
tests/runtime/: test_runtime.py
tests/telemetry/: test_body_filtering.py  test_tracer.py
tests/tools/: test_executor.py  test_python_sandbox.py  test_registry.py  test_terminal_validation.py
tests/web/: test_app.py  test_dashboard_v2.py
vibee_hacker/: __init__.py
vibee_hacker/cli/: live_display.py  main.py
vibee_hacker/config/: __init__.py  config.py
vibee_hacker/core/: agent_graph.py  agent_scanner.py  alert_manager.py  auth.py  autofix.py  autofix_pr.py  code_gateway.py  crawler.py  cvss.py  engine.py  file_utils.py  headless_crawler.py  interactsh_client.py  marketplace.py  models.py  nuclei_compat.py  oob_server.py  orchestrator.py  plugin_base.py  plugin_loader.py  poc_generator.py  poc_verifier.py  rate_limiter.py  repeater.py  scan_policy.py  scheduler.py  session.py  state.py  taint_tracker.py  template_engine.py  workflow.py
vibee_hacker/llm/: __init__.py  config.py  llm.py  memory_compressor.py
vibee_hacker/reports/: html_report.py  json_report.py  pdf_report.py  sarif_report.py
vibee_hacker/runtime/: __init__.py  runtime.py
vibee_hacker/skills/: __init__.py
vibee_hacker/telemetry/: __init__.py  tracer.py
vibee_hacker/templates/: example_header.yaml  example_sqli.yaml  example_xss.yaml
vibee_hacker/tools/: __init__.py  executor.py  registry.py
vibee_hacker/web/: __init__.py  app.py
vibee_runs/scan-0bcfb081/: events.jsonl
(+407 files in other folders)
