[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vibee-hacker"
version = "1.3.0"
description = "Security vulnerability scanner with 132 plugins — blackbox + whitebox + IaC"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "VIBEE-Hacker Contributors"}]
keywords = ["security", "scanner", "vulnerability", "pentest", "sast", "dast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "jinja2>=3.1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/aop60003/hacky"
Repository = "https://github.com/aop60003/hacky"
Issues = "https://github.com/aop60003/hacky/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
]

[project.scripts]
vibee-hacker = "vibee_hacker.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
